criando tabuleiro de letras

--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
 </head>
 <body>
     <section class="container">
-        <div class="container-inputs">
-            <div>
-                <input type="text" name="" id="">
-                <button class="btn-check">Verificar</button>
-                <button class="btn-sortear">Sotear</button>
+        <div class="container-game">
+            <h1>Escolha uma letra</h1>
+            <div class="lista-letras">
+
             </div>
             <div class="container-linha">
                 
+                
+            </div>
+            <div>
+                <button class="btn-check">Verificar</button>
+                <button class="btn-sortear">iniciar jogo</button>
             </div>
         </div>
 
