--- a/game.html
+++ b/game.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogo da Forca</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/game.css">
 </head>
 
 <body>
@@ -29,6 +30,7 @@
             </div>
             <div class="container-linha">
 
+               <span class="msg"></span>
 
             </div>
         </div>
